fixed small footer whitespace problem

--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -3,6 +3,7 @@ body {
     background-image: url(../assets/backgroundBurger.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    height: 100vh;
 }
 
 .title {
@@ -143,4 +144,5 @@ footer {
     background-color: rgba(0, 0, 19, 0.6);
     padding: 0.3%;
     text-align: center;
+
 }
